# pyspark_data_mocker

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: integration_tests.yml  publish.yml  smoke_tests.yml  test-package.yml  test.yml
docs/: index.md
docs/css/: extra.css
docs/documentation/: configuration.md  schema_infering.md
integration/pyspark_3_2/: basic_automatic_inferring.md  basic_default.md  basic_delta_1_2_1.md  basic_delta_2_0_2.md  schema_definition_default.md  schema_definition_delta_1_2_1.md  schema_definition_delta_2_0_2.md
integration/pyspark_3_3/: basic_automatic_inferring.md  basic_default.md  basic_delta_2_2_0.md  basic_delta_2_3_0.md  schema_definition_default.md  schema_definition_delta_2_2_0.md  schema_definition_delta_2_3_0.md
integration/pyspark_3_4/: basic_automatic_inferring.md  basic_default.md  basic_delta_2_4_0.md  schema_definition_default.md  schema_definition_delta_2_4_0.md
integration/pyspark_3_5/: basic_default.md  basic_delta_3_5.md  basic_delta_3_5_2.md  schema_definition_delta_3_5_2.md
pyspark_data_mocker/: __init__.py  datalake_builder.py  spark_session.py  utils.py
pyspark_data_mocker/config/: __init__.py  app_config.py  default_config.yaml  schema.py  validators.py
tests/: conftest.py  test_dummy.py  test_spark_session.py  test_utils.py
tests/config/: test_default_config.py  test_get_config_from_dir.py  test_get_schema_configuration_from_dir.py  test_schema.py  test_validators.py
tests/data/column_type_not_supported/: schema_config.yaml
tests/data/config/: default_warehouse_temp_dir.yaml  disabled_spark_configuration.yaml  example.yaml  infer_schema.yaml  invalid_column_schema.yaml  (+2 more)
tests/datalake_builder/: test_datalake_builder_dsl.py  test_load_from_dir.py
(+9 files in other folders)
