[tool.poetry]
name = "pyspark-data-mocker"
version = "0.1.0"
description = "Mock a datalake easily to be able to test your pyspark data application"
authors = ["Federico Gomez <fedemgp@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "pyspark_data_mocker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
